fixing the contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  /* fixing the contrast of the background*/
+  background-color: white;
   margin: 0;
   padding: 0;
 }
@@ -39,7 +40,7 @@ img {
 
 .main-nav ul li a {
   display: block;
-  color: inherit;
+  color: black;
   text-decoration: none;
   font-size: 1.25rem;
 }
@@ -68,4 +69,9 @@ form button {
 
 .site-footer {
   padding: 2rem 0;
+}
+/* fixing the contrast of the placeholders */
+.contact-section ::placeholder {
+  color: black;
+
 }
